update firebase config